<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:custom="http://schemas.android.com/apk/res/org.iilab.pb"
            android:id="@+id/sms_settings_fragment_root"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            style="@style/wizard_static_panel">
    <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="fill_parent"
                 android:stretchColumns="0"
                 android:orientation="vertical">

            <TextView android:id="@+id/sms_settings_header"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/wizard_page_title"/>

        <View android:layout_height="1dp"
              android:layout_width="match_parent"
              style="@style/wizard_title_sep"/>

            <TextView android:text="@string/sms_settings_subtitle"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      style="@style/wizard_text"/>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:text="@string/first_contact"
                      style="@style/contact_number" />
            <fragment android:name="org.iilab.pb.common.ContactPickerFragment"
                      android:layout_height="wrap_content"
                      android:layout_width="fill_parent"
                      android:id="@+id/first_contact"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView android:layout_height="fill_parent"
                      android:layout_width="wrap_content"
                      android:text="@string/second_contact"
                      style="@style/contact_number" />
            <fragment android:name="org.iilab.pb.common.ContactPickerFragment"
                      android:layout_height="wrap_content"
                      android:layout_width="fill_parent"
                      android:id="@+id/second_contact"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView android:layout_height="fill_parent"
                      android:layout_width="wrap_content"
                      android:text="@string/third_contact"
                      style="@style/contact_number" />
            <fragment android:name="org.iilab.pb.common.ContactPickerFragment"
                      android:layout_height="wrap_content"
                      android:layout_width="fill_parent"
                      android:id="@+id/third_contact"/>
        </LinearLayout>

        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="0dip"
                android:layout_weight="1">
            <fragment android:id="@+id/sms_message"
                      android:name="org.iilab.pb.fragment.MessageTextFragment"
                      custom:max_characters="85"
                      custom:message_header="@string/emergency_message_header"
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
