<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView xmlns:custom="http://schemas.android.com/apk/res/org.iilab.pb"
        android:id="@+id/wizard_start_root"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/wizard_static_panel">

            <TextView
                android:id="@+id/fragment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_title_text"
                android:textSize="32sp"
                android:paddingBottom="5dp"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/fragment_intro"
                style="@style/wizard_intro_style"
                android:layout_below="@+id/fragment_title" />

            <LinearLayout
                android:id="@+id/ll_fragment_warning"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/fragment_intro">

                <ImageView
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:background="@drawable/warning" />

                <TextView
                    android:id="@+id/fragment_warning"
                    style="@style/wizard_warning_style" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/ll_fragment_warning"
                android:layout_weight="1">

                <fragment
                    android:id="@+id/sms_message"
                    android:name="org.iilab.pb.fragment.MessageTextFragment"
                    custom:max_characters="85"
                    custom:message_header="@string/emergency_message_header"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <Button
                android:id="@+id/fragment_action"
                android:text="@string/page_button_action_text"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:background="@drawable/drawable_wizard_button"
                style="@style/activate_disguise_button"
                android:layout_marginTop="5dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_below="@+id/ll_message"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/fragment_contents"
                android:layout_below="@+id/fragment_action"
                style="@style/wizard_content_style" />
        </RelativeLayout>


        <!--    </LinearLayout>-->
    </ScrollView>

    <ListView
        android:id="@+id/fragment_item_list"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp" />
</LinearLayout>
